# llm_assistant

./: .gitattributes  .gitignore  README.md  hacs.json
.github/workflows/: docker.yml
custom_components/kokoro_tts/: __init__.py  config_flow.py  const.py  manifest.json  strings.json  tts.py
custom_components/kokoro_tts/translations/: en.json
custom_components/llm_assistant/: __init__.py  config_flow.py  const.py  conversation.py  entity.py  lmstudio.py  manifest.json  services.yaml  strings.json
custom_components/llm_assistant/translations/: en.json
docker/kokoro-rocm/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  setup.sh  truenas-compose.yml
docker/kokoro-rocm/app/: main.py  pyproject.toml
docker/kokoro-rocm/wyoming/: Dockerfile  server.py
docker/qwen-asr-rocm/: Dockerfile  docker-compose.yml  entrypoint.sh  truenas-compose.yml
