[project]
name = "kokoro-api"
version = "1.0.0"
description = "Minimal OpenAI-compatible Kokoro TTS API (ONNX Runtime backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.12",
    "numpy>=1.26",
    # onnxruntime / onnxruntime-rocm is installed in the Dockerfile
    # based on the GPU_SUPPORT build arg (not listed here to avoid conflicts)
]
